<resources>
    <string name="app_name">PROG39402_CaseStudy3</string>

    <string name="empty_list_descriptor">The list is empty</string>

    <string name="grocery_image">Grocery Image</string>

    <string name="li_lbl_price">Price: </string>
    <string name="li_lbl_quantity">Quantity: </string>

    <string name="li_prefix_price">$CAD.</string>

    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_name">Name</string>

    <string name="postfix_price">$</string>
    <string name="postfix_weight">lbs</string>

    <string name="hint_name">Hamburger</string>
    <string name="hint_price">5.20</string>
    <string name="hint_weight">0.7</string>
    <string name="hint_quantity">2</string>

    <string name="bnt_save_item">Save Item</string>
</resources>
