<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ca.sheridancollege.prog39402_casestudy3.util.GroceryImage" />

        <variable
            name="vm"
            type="ca.sheridancollege.prog39402_casestudy3.fragmentAddGroceryItem.AddGroceryItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/lbl_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tilName"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tilName" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/li_lbl_price"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/tilPrice"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/tilPrice" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/lbl_weight"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/etWeight"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/etWeight" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/lbl_quantity"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/etQuantity"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/etQuantity" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".35" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            tilError="@{vm.nameError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:errorEnabled="@{vm.nameErrorState}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:text="@={vm.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            tilError="@{vm.priceError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:errorEnabled="@{vm.priceErrorState}"
            app:layout_constraintEnd_toStartOf="@id/tvPricePostfix"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                android:text="@={vm.price}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etWeight"
            tilError="@{vm.weightError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:errorEnabled="@{vm.weightErrorState}"
            app:layout_constraintEnd_toStartOf="@id/tvWeightPostfix"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tilPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_weight"
                android:inputType="numberDecimal"
                android:text="@={vm.weight}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etQuantity"
            tilError="@{vm.quantityError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:errorEnabled="@{vm.quantityErrorState}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/etWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:text="@={vm.quantity}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPricePostfix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/postfix_price"
            app:layout_constraintBottom_toBottomOf="@id/tilPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tilPrice" />

        <TextView
            android:id="@+id/tvWeightPostfix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/postfix_weight"
            app:layout_constraintBottom_toBottomOf="@id/etWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etWeight" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/grocery_image"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etQuantity" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/food"
                android:drawableRight="@drawable/food"
                android:onClick="@{()->vm.btnImageClick(GroceryImage.FOOD)}" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/food_apple"
                android:drawableRight="@drawable/food_apple"
                android:onClick="@{()->vm.btnImageClick(GroceryImage.APPLE)}" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/food_croissant"
                android:drawableRight="@drawable/food_croissant"
                android:onClick="@{()->vm.btnImageClick(GroceryImage.CROISSANT)}" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/food_drink"
                android:drawableRight="@drawable/food_drink"
                android:onClick="@{()->vm.btnImageClick(GroceryImage.DRINK)}" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            toggleVisibility="@{!vm.isSaving}"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:minWidth="150dp"
            android:onClick="@{()->vm.btnSaveClick()}"
            android:text="@string/bnt_save_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            toggleVisibility="@{vm.isSaving}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>