<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="groceryItem"
            type="ca.sheridancollege.prog39402_casestudy3.data.model.GroceryItem" />

        <variable
            name="clickListener"
            type="ca.sheridancollege.prog39402_casestudy3.adapters.listeners.GroceryItemClickListener" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="@{()->clickListener.onGroceryItemClick(groceryItem)}"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivProduct"
                glideImage="@{groceryItem.image}"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/grocery_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@{groceryItem.name}"
                app:layout_constraintStart_toEndOf="@+id/ivProduct"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Grocery Name" />

            <TextView
                android:id="@+id/tvProductPricePrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/li_lbl_price"
                app:layout_constraintStart_toEndOf="@+id/ivProduct"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvPricePrefix"
                textDouble="@{groceryItem.price}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvProductPricePrefix"
                app:layout_constraintStart_toEndOf="@+id/tvProductPricePrefix"
                app:layout_constraintTop_toTopOf="@+id/tvProductPricePrefix"
                tools:text="@string/li_prefix_price" />

            <TextView
                android:id="@+id/tvPrice"
                textDouble="@{groceryItem.price}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPricePrefix"
                app:layout_constraintStart_toEndOf="@+id/tvPricePrefix"
                app:layout_constraintTop_toTopOf="@+id/tvPricePrefix"
                tools:text="100" />

            <TextView
                android:id="@+id/tvProductQtyPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/li_lbl_quantity"
                app:layout_constraintStart_toEndOf="@+id/ivProduct"
                app:layout_constraintTop_toBottomOf="@+id/tvProductPricePrefix" />

            <TextView
                android:id="@+id/tvQty"
                textInt="@{groceryItem.qty}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toEndOf="@+id/tvProductQtyPrefix"
                app:layout_constraintTop_toTopOf="@+id/tvProductQtyPrefix"
                tools:text="100" />

            <TextView
                android:id="@+id/tvId"
                textLong="@{groceryItem.id}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Product ID" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>